force-app/main/default/objects/PI_Assignment__c/PI_Assignment__c.object-meta.xml
<CustomObject>
    <label>PI Assignment</label>
    <nameField>
        <displayFormat>PIA-{000000}</displayFormat>
        <label>PI Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>