force-app/main/default/objects/PI_Assignment__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PI Assignments</relationshipLabel>
    <relationshipName>PI_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>