force-app/main/default/objects/PI_Assignment__c/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Consultant</label>
    <type>Checkbox</type>
</CustomField>