force-app/main/default/objects/PI_Assignment__c/fields/PI_Project__c.field-meta.xml
<CustomField>
    <fullName>PI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI Project</label>
    <referenceTo>PI_Project__c</referenceTo>
    <relationshipLabel>PI Assignments</relationshipLabel>
    <relationshipName>PI_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>